# temporal-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
docs/: PLAN.txt
src/temporal_mcp/: __init__.py  client.py  config.py  models.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_server.py
